gccida/g2/reg_alternate_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reg_alternate_class/src/regclass.c:1370:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class  reg_alternate_class( int regno) 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reg_alternate_class/src/regclass.c:1372:6: error: use of undeclared identifier 'reg_pref_0'; did you mean 'reg_pref'?
if ( reg_pref_0 ) 
     ^~~~~~~~~~
     reg_pref
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reg_alternate_class/src/regclass.c:870:25: note: 'reg_pref' declared here
static struct reg_pref *reg_pref;
                        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reg_alternate_class/src/regclass.c:1373:8: error: use of undeclared identifier 'reg_pref_0'; did you mean 'reg_pref'?
return reg_pref_0[regno].altclass; 
       ^~~~~~~~~~
       reg_pref
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reg_alternate_class/src/regclass.c:870:25: note: 'reg_pref' declared here
static struct reg_pref *reg_pref;
                        ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reg_alternate_class/src/obj/regclass.o] Error 1
